[package]
edition = "2018"
name = "dps310"
version = "0.1.2"
authors = ["dprotsiv"]
description = "A platform agnostic driver to interface with the DPS310 barometric pressure & temp sensor through I2C"
documentation = "https://docs.rs/dps310"
readme = "README.md"
keywords = ["embedded-hal-driver", "pressure", "temperature", "sensor", "infineon"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dprotsiv/dps310-rs"

[package.metadata.docs.rs]
targets = ["thumbv6m-none-eabi"]

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
stm32f3xx-hal = { version = "0.9", features = ["stm32f303xc", "rt"] }
